--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "codemirror": "^5.40.2",
     "create-react-class": "^15.6.3",
     "d3": "^5.7.0",
+    "evergreen-ui": "^4.0.0",
     "highlight.js": "^9.13.1",
     "parinfer": "^3.12.0",
     "parinfer-codemirror": "^1.4.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-grid-layout": "^0.16.6",
-    "shadow-cljs": "^2.6.12"
+    "react-icons": "^2.2.7",
+    "reakit": "^0.11.2",
+    "shadow-cljs": "^2.6.14"
   }
 }
